--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vue-html2pdf",
-  "version": "1.8.0",
+  "name": "nuxt-page-pdf",
+  "version": "1.0.0",
   "description": "",
-  "main": "dist/vue-html2pdf.ssr.js",
-  "module": "dist/vue-html2pdf.esm.js",
-  "unpkg": "dist/vue-html2pdf.min.js",
+  "main": "dist/nuxt-page-pdf.ssr.js",
+  "module": "dist/nuxt-page-pdf.esm.js",
+  "unpkg": "dist/nuxt-page-pdf.min.js",
   "files": [
     "dist/*",
     "src/**/*.vue"
@@ -24,7 +24,7 @@
     "html2pdf"
   ],
   "dependencies": {
-    "html2pdf.js": "^0.9.2"
+    "html2pdf.js": "^0.10.1"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^2.2.0",
